--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "digital-dwarf",
+  "name": "vguleaev.dev",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -14,7 +14,14 @@
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
+    "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.4.3",
+    "luxon": "^3.4.3",
+    "preline": "^1.9.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.3.3"
   }
 }
