--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.3",
     "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.1.0",
+    "@vercel/analytics": "^1.1.1",
     "astro": "^3.4.3",
     "luxon": "^3.4.3",
     "preline": "^1.9.0",
