Add new favicon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
-  "cSpell.words": [
-    "astrojs"
-  ],
+  "cSpell.words": ["astrojs", "Guleaev", "Vladislav"],
   "editor.formatOnSave": true
 }
