--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/luxon": "^3.3.3"
+    "@types/luxon": "^3.3.3",
+    "sharp": "^0.32.6"
   }
 }
