--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["astrojs", "Guleaev", "Vladislav"],
+  "cSpell.words": ["Astro", "astrojs", "Guleaev", "Vladislav"],
   "editor.formatOnSave": true
 }
