--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^3.4.3",
     "luxon": "^3.4.3",
     "preline": "^1.9.0",
+    "reading-time-estimator": "^1.9.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
   },
