--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vercel/analytics": "^1.1.1",
     "astro": "^3.4.3",
     "luxon": "^3.4.3",
+    "mdast-util-to-string": "^4.0.0",
     "preline": "^1.9.0",
     "reading-time-estimator": "^1.9.0",
     "tailwindcss": "^3.0.24",
