--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
+    "check-updates": "npm outdated",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.3.1",
-    "@astrojs/mdx": "^1.1.3",
-    "@astrojs/rss": "^3.0.0",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.2",
-    "@astrojs/vercel": "^5.1.0",
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^3.1.0",
+    "@astrojs/rss": "^4.0.6",
+    "@astrojs/sitemap": "^3.1.5",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.0",
     "@vercel/analytics": "^1.1.1",
-    "astro": "^3.4.3",
+    "astro": "^4.10.2",
     "luxon": "^3.4.3",
     "mdast-util-to-string": "^4.0.0",
     "preline": "^1.9.0",
