--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mdast-util-to-string": "^4.0.0",
     "preline": "^2.7.0",
     "reading-time-estimator": "^1.11.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   },
