--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "check-updates": "npm outdated",
+    "check-updates": "npx npm-check-updates --interactive --format group",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.0.3",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/sitemap": "^3.3.0",
     "@astrojs/tailwind": "^5.1.4",
-    "@astrojs/vercel": "^8.0.1",
-    "@vercel/analytics": "^1.4.1",
+    "@astrojs/vercel": "^8.1.3",
+    "@vercel/analytics": "^1.5.0",
     "astro": "^5.1.2",
     "luxon": "^3.5.0",
     "mdast-util-to-string": "^4.0.0",
@@ -29,7 +29,7 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@types/luxon": "^3.4.2",
+    "@types/luxon": "^3.6.2",
     "sharp": "^0.33.5"
   }
 }
