--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/tailwind": "^5.1.4",
     "@astrojs/vercel": "^8.1.3",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.1.2",
     "luxon": "^3.5.0",
     "mdast-util-to-string": "^4.0.0",
